# fuzler

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  checksum-Elixir.Fuzler.exs  mix.exs
.github/workflows/: main.yml
bench/: similarity_bench.exs
config/: config.ex
lib/: fuzler.ex  top_heap.ex
native/fuzler/: Cargo.toml  README.md
native/fuzler/src/: lib.rs
test/: fuzler_test.exs
