[package]
name = "fuzler"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "fuzler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
triple_accel = "0.4.0"
smallvec = "1.13"
rustc-hash = "1.1"
tracing = "0.1.41"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = "debuginfo"
